--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <scm>
         <connection>scm:git:https://github.com/pengyongjianpyj/netty-websocket-http-spring-boot-starter.git</connection>
         <developerConnection>scm:git:https://github.com/pengyongjianpyj/netty-websocket-http-spring-boot-starter.git</developerConnection>
-        <url>git:https://github.com/pengyongjianpyj/netty-websocket-http-spring-boot-starter.git</url>
+        <url>https://github.com/pengyongjianpyj/netty-websocket-http-spring-boot-starter</url>
     </scm>
     <developers>
         <developer>
@@ -31,6 +31,17 @@
             <email>pengyongjianpyj@163.com</email>
         </developer>
     </developers>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
     <properties>
         <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
@@ -126,16 +137,17 @@
                         <version>3.0.1</version>
                         <executions>
                             <execution>
+                                <id>attach-sources</id>
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
-                                <configuration>
-                                    <additionalOptions>
-                                        <additionalOption>
-                                            -Xdoclint:none
-                                        </additionalOption>
-                                    </additionalOptions>
-                                </configuration>
+<!--                                <configuration>-->
+<!--                                    <additionalOptions>-->
+<!--                                        <additionalOption>-->
+<!--                                            -Xdoclint:none-->
+<!--                                        </additionalOption>-->
+<!--                                    </additionalOptions>-->
+<!--                                </configuration>-->
                             </execution>
                         </executions>
                     </plugin>
@@ -146,6 +158,7 @@
                         <version>1.6</version>
                         <executions>
                             <execution>
+                                <id>sign-artifacts</id>
                                 <phase>verify</phase>
                                 <goals>
                                     <goal>sign</goal>
@@ -161,23 +174,13 @@
                         <extensions>true</extensions>
                         <configuration>
                             <serverId>ossrh</serverId>
-                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                             <autoReleaseAfterClose>true</autoReleaseAfterClose>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
 
-            <distributionManagement>
-                <snapshotRepository>
-                    <id>ossrh</id>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-                </snapshotRepository>
-                <repository>
-                    <id>ossrh</id>
-                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-                </repository>
-            </distributionManagement>
         </profile>
     </profiles>
 
@@ -186,7 +189,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+<!--                <version>3.1</version>-->
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
