--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -11,7 +11,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.pyj</groupId>
+            <groupId>io.github.pengyongjianpyj</groupId>
             <artifactId>netty-websocket-http-spring-boot-starter</artifactId>
             <version>0.1.0</version>
         </dependency>
